--- a/index.html
+++ b/index.html
@@ -3,75 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- SEO Meta Tags -->
-    <title>CumulusClad Technologies - Premium AI Solutions &amp; Cloud Services</title>
-    <meta name="description" content="Transform your business with CumulusClad Technologies. Leading provider of AI solutions, cloud infrastructure, digital transformation, and cyber security services. From idea to execution, we're your trusted tech partner.">
-    <meta name="keywords" content="AI solutions, cloud services, digital transformation, cyber security, IoT solutions, tech consulting, software development, machine learning, cloud migration, digital experience">
+    <title>CumulusClad Technologies - From Idea to Execution</title>
+    <meta name="description" content="Professional luxury technology solutions. AI, cloud, cybersecurity, and digital transformation services. Transform your vision into reality with cutting-edge innovation." />
     <meta name="author" content="CumulusClad Technologies" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://cumulusclad.com/" />
+    <meta name="keywords" content="AI solutions, cloud technology, cybersecurity, digital transformation, IoT, custom software development" />
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="CumulusClad Technologies - Premium AI Solutions & Cloud Services" />
-    <meta property="og:description" content="Transform your business with cutting-edge AI solutions, cloud infrastructure, and digital experiences that drive real results. From idea to execution, we're your tech team." />
+    <meta property="og:title" content="CumulusClad Technologies - From Idea to Execution" />
+    <meta property="og:description" content="Professional luxury technology solutions. Transform your vision into reality with cutting-edge innovation." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cumulusclad.com/" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/Bc6kW9ldEePjAZEjRBkOtRxi4cO2/social-images/social-1758539100579-cumulus logo  2 (1).png">
-    <meta property="og:site_name" content="CumulusClad Technologies" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@cumulusclad" />
-    <meta name="twitter:title" content="CumulusClad Technologies - Premium AI Solutions & Cloud Services" />
-    <meta name="twitter:description" content="Transform your business with cutting-edge AI solutions, cloud infrastructure, and digital experiences that drive real results." />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/Bc6kW9ldEePjAZEjRBkOtRxi4cO2/social-images/social-1758539100579-cumulus logo  2 (1).png">
-
-    <!-- Additional SEO Meta Tags -->
-    <meta name="theme-color" content="#8B0000" />
-    <meta name="msapplication-TileColor" content="#8B0000" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-
-    <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "CumulusClad Technologies",
-      "url": "https://cumulusclad.com",
-      "logo": "https://cumulusclad.com/logo.png",
-      "description": "Leading provider of AI solutions, cloud infrastructure, and digital transformation services",
-      "founder": "CumulusClad Team",
-      "foundingDate": "2019",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "San Francisco",
-        "addressRegion": "CA",
-        "addressCountry": "US"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+1-555-123-4567",
-        "contactType": "customer service",
-        "email": "hello@cumulusclad.com"
-      },
-      "sameAs": [
-        "https://linkedin.com/company/cumulusclad",
-        "https://twitter.com/cumulusclad",
-        "https://github.com/cumulusclad"
-      ],
-      "service": [
-        "AI Solutions",
-        "Cloud Services", 
-        "Digital Transformation",
-        "Cyber Security",
-        "IoT Solutions",
-        "Digital Experience Design"
-      ]
-    }
-    </script>
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
