--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CumulusClad Technologies - From Idea to Execution</title>
+  <title>CumulusClad Technologies - Think Deep | Make Impact</title>
   <meta name="description"
     content="Professional luxury technology solutions. AI, cloud, cybersecurity, and digital transformation services. Transform your vision into reality with cutting-edge innovation." />
   <meta name="author" content="CumulusClad Technologies" />
