--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
   <meta name="keywords"
     content="AI solutions, cloud technology, cybersecurity, digital transformation, IoT, custom software development" />
 
-  <meta property="og:title" content="CumulusClad Technologies - From Idea to Execution" />
+  <meta property="og:title" content="CumulusClad Technologies - Think Deep | Make Impact" />
   <meta property="og:description"
     content="Professional luxury technology solutions. Transform your vision into reality with cutting-edge innovation." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body>
