--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CumulusClad Technologies - Think Deep | Make Impact</title>
+  <!-- Essential Meta Tags -->
   <meta name="description"
-    content="Professional luxury technology solutions. AI, cloud, cybersecurity, and digital transformation services. Transform your vision into reality with cutting-edge innovation." />
-  <meta name="author" content="CumulusClad Technologies" />
+    content="CumulusClad: Enterprise software development company specializing in AI-powered solutions, digital transformation, and custom software engineering for businesses worldwide.">
   <meta name="keywords"
-    content="AI solutions, cloud technology, cybersecurity, digital transformation, IoT, custom software development" />
+    content="software development, AI solutions, digital transformation, enterprise software, custom applications, web development, mobile apps, cloud solutions, IoT, machine learning">
+  <meta name="author" content="CumulusClad">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
 
-  <meta property="og:title" content="CumulusClad Technologies - Think Deep | Make Impact" />
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:title" content="CumulusClad Technologies - Think Deep | Make Impact">
   <meta property="og:description"
-    content="Professional luxury technology solutions. Transform your vision into reality with cutting-edge innovation." />
-  <meta property="og:type" content="website" />
+    content="Transform your business with cutting-edge software solutions. AI-powered applications, digital transformation, and custom enterprise software development.">
 
+  <meta property="og:url" content="https://cumulusclad.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="CumulusClad">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CumulusClad - Enterprise Software Development & AI Solutions">
+  <meta name="twitter:description"
+    content="AI-powered software solutions and digital transformation services for forward-thinking businesses.">
+  <meta name="twitter:site" content="@cumulusclad">
+  <meta name="twitter:creator" content="@cumulusclad">
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
