--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="CumulusClad - Enterprise Software Development & AI Solutions">
+  <meta name="twitter:title" content="CumulusClad Technologies - Think Deep | Make Impact">
   <meta name="twitter:description"
     content="AI-powered software solutions and digital transformation services for forward-thinking businesses.">
   <meta name="twitter:site" content="@cumulusclad">
