--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CumulusClad Technologies - Think Deep | Make Impact</title>
+
   <!-- Essential Meta Tags -->
   <meta name="description"
     content="CumulusClad: Enterprise software development company specializing in AI-powered solutions, digital transformation, and custom software engineering for businesses worldwide.">
   <meta name="keywords"
     content="software development, AI solutions, digital transformation, enterprise software, custom applications, web development, mobile apps, cloud solutions, IoT, machine learning">
   <meta name="author" content="CumulusClad">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
 
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:title" content="CumulusClad Technologies - Think Deep | Make Impact">
   <meta property="og:description"
     content="Transform your business with cutting-edge software solutions. AI-powered applications, digital transformation, and custom enterprise software development.">
-
-  <meta property="og:url" content="https://cumulusclad.com">
+  <meta property="og:image" content="https://www.cumulusclad.com/logo.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="CumulusClad Technologies - Innovative Software Solutions">
+  <meta property="og:url" content="https://www.cumulusclad.com/">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="CumulusClad">
+  <meta property="og:site_name" content="CumulusClad Technologies">
   <meta property="og:locale" content="en_US">
 
   <!-- Twitter Card Meta Tags -->
@@ -29,19 +32,30 @@
   <meta name="twitter:title" content="CumulusClad Technologies - Think Deep | Make Impact">
   <meta name="twitter:description"
     content="AI-powered software solutions and digital transformation services for forward-thinking businesses.">
+  <meta name="twitter:image" content="https://www.cumulusclad.com/logo.png">
+  <meta name="twitter:image:alt" content="CumulusClad Technologies">
   <meta name="twitter:site" content="@cumulusclad">
   <meta name="twitter:creator" content="@cumulusclad">
 
+  <!-- Additional Meta Tags for Better Sharing -->
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+  <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/logo.png">
+
+  <!-- Preload important resources -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Dev Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-
-
 </body>
 
 </html>
