--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="i36Um9JAdx4-RJlgdr4yo2OZgdFRX31YdXPhwOLPGRI" />
   <title>CumulusClad Technologies - Think Deep | Make Impact</title>
 
   <!-- Essential Meta Tags -->
